# vegen

./: CNAME  Cargo.toml  LICENSE  README.md  _config.yml  index.html
.github/workflows/: checks.yml  release.yml
_layouts/: base.html
assets/js/: toc.js
docs/web/: index.html  style.css
examples/: index.html  package-lock.json  package.json  playwright.config.ts
examples/assets/: index--O40hr-A.js  index-COmWiznV.js  index-j8B8rrpF.css
examples/counter/: package.json
examples/src/: root.ts  root.vg  style.css  views.ts
examples/src/cafe/: cafe.vg  (+1 more)
examples/tests/: cafe.spec.ts  counter.spec.ts  todo.spec.ts
examples/todo/: package-lock.json  package.json
src/: ast.rs  ast_query.rs  attribute_types.json  attribute_types.rs  builtins.rs  compile.rs  emit.rs  error.rs  expr.rs  graph.rs  ir.rs  lib.ts  main.rs  parser.rs  ts_type.rs  ts_util.rs
src/lang/: ast.rs  ast_query.rs  mod.rs  parser.rs
src/lsp/: diagnostics.rs  documents.rs  handlers.rs  mod.rs  transport.rs
src/template/: loader.rs  mod.rs  module.rs  path.rs  resolver.rs  source_map.rs
src/type_system/: environment.rs  infer.rs  mod.rs  solver.rs  types.rs  uf.rs
support/vscode-vegen/: README.md  language-configuration.json  package-lock.json  package.json
support/vscode-vegen-syntax/: package.json
tests/e2e/: index.html  package-lock.json  package.json
tests/errors/: test_all.sh
todo/: index.html
todo/assets/: index-538VOEjd.css  index-BDYKah8R.js  index-CRVbusSA.js  index-PuHmD6xq.js
tools/: deploy-gh-pages.sh
tools/list-attribute-types/: package-lock.json  package.json
(+44 files in other folders)
