[package]
name = "vegen"
authors = ["Kevin Mahoney <kevin@kevinmahoney.co.uk>"]
description = "A compiler for tiny, efficient, updatable TypeScript HTML templates"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/KMahoney/vegen"
license = "MIT"
readme = "README.md"

[dependencies]
ariadne = "0.5.1"
chumsky = "0.11.0"
clap = { version = "4.5.41", features = ["cargo"] }
serde_json = "1.0"
once_cell = "1.18"
itertools = "0.14.0"
lsp-types = "0.97.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.5.0"
path-clean = "1.0.1"
